--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ packages = [
 python = "^3.8"
 flake8 = "^3.9.0"
 wemake-python-styleguide = "^0.15.2"
+pytest = "^6.2.3"
 
 [tool.poetry.dev-dependencies]
 
