--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ python = "^3.8"
 flake8 = "^3.9.0"
 wemake-python-styleguide = "^0.15.2"
 pytest = "^6.2.3"
+pytest-cov = "^2.11.1"
 
 [tool.poetry.dev-dependencies]
 
