--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -21,6 +21,7 @@ jobs:
       - name: Install dependencies
         run: |
           pip install poetry
+          pip install pytest
           make install
       - name: Run linter
         run: |
