--- a/setup.cfg
+++ b/setup.cfg
@@ -11,7 +11,7 @@ enable-extensions = G
 isort-show-traceback = True
 
 # clean default ignore list
-ignore =
+ignore = WPS515, WPS110, WPS421, WPS331, WPS440, WPS336
 
 per-file-ignores =
   # it is possibble to have prints in scripts
