--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ flake8 = "^3.9.0"
 wemake-python-styleguide = "^0.15.2"
 pytest = "^6.2.3"
 pytest-cov = "^2.11.1"
+PyYAML = "^5.4.1"
+coverage = "^5.5"
 
 [tool.poetry.dev-dependencies]
 
